--- a/index.html
+++ b/index.html
@@ -1,9 +1,35 @@
 <!DOCTYPE html>
-<html>
-<Head>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Meet Perth</title>
+    <link rel="stylesheet" href="setting.css">
+    <link rel="stylesheet" href="/css/style.css">
+  
+</head>
+<body>
+    <header>
+            <body background-color="#000" background="img/abstract_pattern-83405.png">
+        <div class="conteiner">
+            <div class="logo">
+                <img src="img/red-cursive-letter-p_5627ead7cf511.png" width="100">
+            </div>
+            <div class="menu">
+                <img src="/img/C-_Users_User_Desktop_программирование_site1-master_img_computer-icons-menu-cafe-menu.png" width="90">
+            </div>
+            <div class="name">
+                <h1>Meet Perth,</h1>
 
-    
-</Head>
+            </div>
+            <div>
+                <p>A stupidly simple, flat PSD. Oh yeah,it's free too!</p>
+
+
+            </div>
+
+
+        
+        </div class="container">
 
 
 
@@ -12,5 +38,8 @@
 
 
 
+    </header>
 
+</body>
 </html>
+
