--- a/site1-master/index.html
+++ b/site1-master/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-            <body background-color="#000" background="img/header bg.png">
+            <body background="img/header bg.png">
         <div class="conteiner">
             <div class="logo">
                 <img src="img/logo.png" width="100">
@@ -21,7 +21,7 @@
                 <h1>Meet Perth,</h1>
 
             </div>
-            <div>
+            <div class="text1">
                 <p>A stupidly simple, flat PSD. Oh yeah,it's free too!</p>
                 
 
