--- a/site1-master/index.html
+++ b/site1-master/index.html
@@ -9,21 +9,21 @@
 </head>
 <body>
     <header>
-            <body background="img/header bg.png">
+            <body background-color="#000" background="img/abstract_pattern-83405.png">
         <div class="conteiner">
             <div class="logo">
-                <img src="img/logo.png" width="100">
+                <img src="img/red-cursive-letter-p_5627ead7cf511.png" width="100">
             </div>
             <div class="menu">
-                <img src="img/nav.png " width="30" height="20">
+                <img src="/img/C-_Users_User_Desktop_программирование_site1-master_img_computer-icons-menu-cafe-menu.png" width="90">
             </div>
             <div class="name">
                 <h1>Meet Perth,</h1>
 
             </div>
-            <div class="text1">
+            <div>
                 <p>A stupidly simple, flat PSD. Oh yeah,it's free too!</p>
-                
+
 
             </div>
 
